--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
@@ -51,14 +51,14 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Inbound strategies for lead generation require less work for your business, bringing customers directly to your website." />
+            <img src="./assets/images/lead-generation.png" alt="Inbound strategies for lead generation require less work for your business, bringing customers directly to your website."></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Users find your business through paid and organic searches, increasing the search ranking and visibility for your business."/>
+            <img src="./assets/images/brand-awareness.png" alt="Users find your business through paid and organic searches, increasing the search ranking and visibility for your business."></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
