--- a/index.html
+++ b/index.html
@@ -7,76 +7,89 @@
     <title>Horiseon</title>
 </head>
 
-<body>
-    <div class="header">
+<main>
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization" alt="Link to Search Engine Optimization Information">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization" alt="Link to Search Engine Optimization Information">Search
+                        Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management" alt=" Link to Online Reputation Management Information">Online Reputation Management</a>
+                    <a href="#online-reputation-management"
+                        alt=" Link to Online Reputation Management Information">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing" alt="Link to Social Media Marketing Information">Social Media Marketing</a>
+                    <a href="#social-media-marketing" alt="Link to Social Media Marketing Information">Social Media
+                        Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        </nav>
+    </header>
+    <figure></figure>
+    <article>
+        <section>
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section>
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management gives
+                you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section>
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+        </section>
+    </article>
+    <aside>
+        <section>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Inbound strategies for lead generation require less work for your business, bringing customers directly to your website."></img>
+            <img src="./assets/images/lead-generation.png" alt="An image of a notepad on a desk with a laptop on the left, a cup of coffee, and a cup of pens on the right. The notepad has illustrations of a thought bubble with the letter SEO surrounded by different, smaller illustrations. Reading clockwise from the top, there is a diamond with the word content above it, the word heading with H1, H2, and H3 underneath, a smartphone with the words mobile compatibility underneath, a thumbs up emoji with the words social media underneath, a bridge over a river with the words link building underneath, and two links in a chain with the word backline above. "></img>
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Users find your business through paid and organic searches, increasing the search ranking and visibility for your business."></img>
+            <img src="./assets/images/brand-awareness.png" alt="An image of someone working on a laptop with different, indescript charts and the word reputation in a bold, red block."></img>
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page."></img>
+            <img src="./assets/images/cost-management.png" alt="An image of a table with people around it, and on the table are different icons pertaining to social media with the words tweet, media, like, and share in different speech bubbles. "></img>
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
-</body>
+        </section>
+    </aside>
+
+</main>
+<footer>
+    <h4>Made with ❤️️ by Horiseon</h4>
+    <p>
+        &copy; 2023 Horiseon Social Solution Services, Inc.
+    </p>
+</footer>
 
 </html>
