--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <figure></figure>
     <article>
-        <section>
+        <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -38,7 +38,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </section>
-        <section>
+        <section id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -47,7 +47,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section>
+        <section id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
